--- a/templates/CreativeSetting.html
+++ b/templates/CreativeSetting.html
@@ -287,12 +287,12 @@
                     </tr>
                     <tr>
                         <td id = 'n9'  style="display:none;padding: 10px 0 10px">AdTag:<br>
-                        <input type="text" name="AdTag" id="AdTag" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="AdTag" id="AdTag" style="width:100%"  value=""></td>
                     </tr>
                     <!-- 3rd Video Audio-->
                     <tr>
                         <td style="padding: 10px 0 10px;display:none" id = 'n10'>VAST XML URL:<br>
-                        <input type="text" name="VAST_XML_URL" id="VAST_XML_URL" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="VAST_XML_URL" id="VAST_XML_URL" style="width:100%"  value=""></td>
                     </tr>
                     <tr>
                         <td  id='a' style="padding: 10px 0 10px">Asset File Name(if you don't change, the same as file name):<br>
@@ -304,28 +304,28 @@
                     </tr>
                     <tr>
                         <td style="padding: 10px 0 10px">Landing_page_url:<br>
-                        <input type="text" name="landing_page_rule" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="landing_page_rule" style="width:100%"  value=""></td>
                     </tr>
                     <!--native-->
                     <tr id = 'n1'  style="display:none">
                         <td style="padding: 10px 0 10px">Native_Short_Title:<br>
-                        <input type="text" name="Native_Short_Title" id="Native_Short_Title" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="Native_Short_Title" id="Native_Short_Title" style="width:100%"  value=""></td>
                     </tr>
                     <tr id = 'n2'  style="display:none">
                         <td style="padding: 10px 0 10px">Native_Long_Title:<br>
-                        <input type="text" name="Native_Long_Title" id="Native_Long_Title" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="Native_Long_Title" id="Native_Long_Title" style="width:100%"  value=""></td>
                     </tr>
                     <tr id = 'n3'  style="display:none">
                         <td style="padding: 10px 0 10px">Native_Short_Description:<br>
-                        <input type="text" name="Native_Short_Description" id="Native_Short_Description" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="Native_Short_Description" id="Native_Short_Description" style="width:100%"  value=""></td>
                     </tr>
                     <tr  id = 'n4'  style="display:none">
                         <td style="padding: 10px 0 10px">Native_Long_Description:<br>
-                        <input type="text" name="Native_Long_Description" id ="Native_Long_Description" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="Native_Long_Description" id ="Native_Long_Description" style="width:100%"  value=""></td>
                     </tr>
                     <tr>
                         <td id = 'n5' style="padding: 10px 0 10px;display:none">Sponsor:<br>
-                        <input type="text" name="Sponsor" id="Sponsor" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="Sponsor" id="Sponsor" style="width:100%"  value=""></td>
                     </tr>
                     <tr>
                         <td id='i' style="padding: 10px 0 10px">Impression_Tracking_url:(Not required)<br>
@@ -334,7 +334,7 @@
                     <!--flash html-->
                     <tr>
                         <td id = 'n6' style="padding: 10px 0 10px; display:none "  >Click Tracking Parameter:<br>
-                        <input type="text" name="Click_Tracking_Parameter" id="Click_Tracking_Parameter" style="width:100%"  value="provided by advertiser"></td>
+                        <input type="text" name="Click_Tracking_Parameter" id="Click_Tracking_Parameter" style="width:100%"  value=""></td>
                     </tr>
                     <tr>
                         <td colspan="2" style="padding: 10px 0 10px">
@@ -350,6 +350,8 @@
             <form style="padding: 10px 0 10px" method="post" id="rule_setting_form_delete" action="/delete_last_rule" target="submitted">
                 <input type="submit" value="remove the last added rule" >
             </form>
+            <br>
+
             <!--
             <table>
                 <tr>
