--- a/templates/index.html
+++ b/templates/index.html
@@ -61,15 +61,16 @@
 <!--                set naming convention and rules for the chosen files, get "Name",-->
 <!--                "landing page URl", "Click through URL" for creative upload file.-->
 <!--                Get a preview of the output file.</div>-->
-            <div>Setup Template: </div>
-            <div>1.type Campaign Name --></div>
-            <div>2.choose creative files to upload--></div>
-            <div>3.type Creative Rule --></div>
-            <div>4.download result template spreadsheet--></div>
-            <div>5.download renamed creatives in zip file.</div>
-            <div>View All Macros: view all macro values that has already been saved so far.
+            <div><b>Setup Template: </b></div>
+            <div>step1. type Campaign Name</div>
+            <div>step2. choose creative files to upload</div>
+            <div>step3. choose Creative Type + Files，and then type Creative Rule </div>
+            <div>Step4. download result template spreadsheet <b>or</b> renamed creatives + template sheet in zip file.</div>
+
+            <div><b>View All Macros:</b> view all macro values that has already been saved so far.
                 (e.g. campaign_name, size, TTD AdgroupID, TTD CampaignID )</div>
-            <div><p>Please "Enable Editing" --> "Save" the excel file before upload the spreadsheet for uploading creatives.</p></div>
+            <div><p>Please "Enable Editing" and "Save" the excel file before upload the spreadsheet for uploading creatives in UI.</p></div>
+            <div><img src="static/enable.png"></div>
       </div>
     </div>
 </div>
