--- a/templates/submitted.html
+++ b/templates/submitted.html
@@ -242,7 +242,7 @@
 
     <p>
     <form  id="output_excel" action="/output" style="padding: 10px 0 10px" >
-         <input type="submit" value="Step1: Download Results {{creative_type}}" >
+         <input type="submit" value="Step1: Download Results" >
     </form>
 <!--    <a href="/output" target="_blank">Step1: Download Results</a>-->
 
