video size round to int, table style, title change

--- a/templates/CampaignName.html
+++ b/templates/CampaignName.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
     <div class="main_content">
-        <div class="header">Welcome to Tracking Creation Assistant.</div>
+        <div class="header">Welcome to Creative Bulk Import Assistant.</div>
         <div class="info">
             <form method="post" action="/CampaignNameSetting">
                 <table>
