--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
         </ul>
     </div>
     <div class="main_content">
-        <div class="header">Welcome to Tracking Creation Assistant.</div>
+        <div class="header">Welcome to Creative Bulk Import Assistant.</div>
         <div class="info">
             <div><p>Instruction:</p></div>
 <!--            <div>Campaign ID: Look up campaign name by campaign ID in TTD API.</div>-->
