--- a/templates/viewMacros.html
+++ b/templates/viewMacros.html
@@ -27,7 +27,7 @@
         </ul>
     </div>
     <div class="main_content">
-        <div class="header">Welcome to Tracking Creation Tools.</div>
+        <div class="header">Welcome to Creative Bulk Import Assistant.</div>
         <div class="info">
             <table class="content-table">
                 <thead>
