--- a/templates/chooseFile.html
+++ b/templates/chooseFile.html
@@ -45,9 +45,13 @@
                 var output = document.getElementById('fileList');
                 var children = "";
                 for (var i = 0; i < input.files.length; ++i) {
-                    children += '<li>' + '<a>File Name: </a>' + input.files.item(i).name
-                        + '<a> &nbsp;&nbsp;File Type: </a>' + input.files.item(i).type  + '</li>';
+                    children += '<tr>' + '<td>'+input.files.item(i).name+'</td>'
+                        + '<td>'+ input.files.item(i).type +'</td>'  + '</tr>';
                 }
+<!--                for (var i = 0; i < input.files.length; ++i) {-->
+<!--                    children += '<li>' + '<a>File Name: </a>' + input.files.item(i).name-->
+<!--                        + '<a> &nbsp;&nbsp;File Type: </a>' + input.files.item(i).type  + '</li>';-->
+<!--                }-->
 <!--                 for (var i = 0; i < new_input.files.length; ++i) {-->
 <!--                    children += '<li>' + '<a>File Name: </a>' + new_input.files.item(i).name-->
 <!--                        + '<a> &nbsp;&nbsp;File Type: </a>' + new_input.files.item(i).type  + '</li>';-->
@@ -55,7 +59,14 @@
 <!--                all_children=all_children+children-->
 
                 var next_div = document.getElementById('next_div');
-                output.innerHTML = 'Updated files:<ul>'+children+'</ul>'+'<input type="submit" value="Next">';
+                output.innerHTML = '<p>Selected files:</p>'+
+                '<table class="content-table">'
+                +'<thead>'
+                +'<tr><td>File Name</td><td>File Type</td></tr>'
+                +'<tbody>'
+                +'<ul>'+children+'</ul>'
+                +'</table>'
+                +'<input type="submit" value="Next">';
 <!--                output.innerHTML = 'Updated files:<ul>'+all_children+'</ul>'+'<input type="submit" value="Next">';-->
                 output.style.display = ""
              }
@@ -96,7 +107,7 @@
         </ul>
     </div>
     <div class="main_content">
-        <div class="header">Welcome to Tracking Creation Assistant.</div>
+        <div class="header">Welcome to Creative Bulk Import Assistant.</div>
         <div class="info">
             <div style="border-radius: 25px; top:20px; left: 20px; border: solid 1px #888; padding: 20px 20px; width: 45%">
                 <p>Upload files to set up templates</p><br>
