--- a/templates/chooseFile.html
+++ b/templates/chooseFile.html
@@ -112,7 +112,7 @@
             <div style="border-radius: 25px; top:20px; left: 20px; border: solid 1px #888; padding: 20px 20px; width: 45%">
                 <p>Upload files to set up templates</p><br>
                 <form method="post" action="/fileUpload" enctype="multipart/form-data">
-                    <input type="file" id="myFile" name="files" multiple="multiple" onchange="updateList()" accept="image/*,video/*,audio/*">
+                    <input type="file" id="myFile" name="files" multiple="multiple" onchange="updateList()" >
 
                     <br></br>
 <!--                    <p>Add more files</p><br>-->
